--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-geolocation": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
