--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
     "geist": "^1.2.1",
+    "google-one-tap": "^1.0.6",
     "lucide-react": "^0.436.0",
     "next": "latest",
     "next-themes": "^0.3.0",
@@ -30,6 +31,7 @@
     "react-hook-geolocation": "^1.1.0"
   },
   "devDependencies": {
+    "@types/google-one-tap": "^1.2.6",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
