--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@vercel/analytics": "^1.3.1",
     "@vis.gl/react-google-maps": "^1.3.0",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
