Added drizzle ORM

--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.34.1",
     "framer-motion": "^11.11.9",
     "geist": "^1.2.1",
     "google-one-tap": "^1.0.6",
     "lucide-react": "^0.436.0",
     "next": "latest",
     "next-themes": "^0.3.0",
+    "postgres": "^3.4.4",
     "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -40,10 +43,12 @@
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
+    "drizzle-kit": "^0.26.2",
     "postcss": "8.4.33",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.1",
     "typescript": "5.3.3"
   }
 }
