--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -37,13 +38,15 @@
   },
   "devDependencies": {
     "@types/google-one-tap": "^1.2.6",
-    "@types/node": "20.10.6",
+    "@types/node": "^20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
     "postcss": "8.4.33",
+    "prisma": "^5.21.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
