--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "@vercel/analytics": "^1.3.1",
     "@vis.gl/react-google-maps": "^1.3.0",
     "autoprefixer": "10.4.17",
