--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.1",
     "react-hook-geolocation": "^1.1.0",
+    "react-icons": "^5.3.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
