--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
+    "migrate": "prisma migrate deploy ",
+    "create-migrations": "prisma migrate dev && prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
