--- a/package.json
+++ b/package.json
@@ -1,70 +1,75 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build",
-    "migrate": "prisma migrate deploy ",
-    "create-migrations": "prisma migrate dev && prisma generate"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.22.0",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-scroll-area": "^1.2.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
-    "@tanstack/react-query": "^5.59.16",
-    "@tanstack/react-query-devtools": "^5.59.16",
-    "@vercel/analytics": "^1.3.1",
-    "@vis.gl/react-google-maps": "^1.3.0",
-    "autoprefixer": "10.4.17",
-    "chrono-node": "^2.7.7",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "embla-carousel": "^8.3.0",
-    "embla-carousel-react": "^8.3.0",
-    "framer-motion": "^11.11.17",
-    "geist": "^1.2.1",
-    "google-one-tap": "^1.0.6",
-    "lucide-react": "^0.436.0",
-    "next": "latest",
-    "next-themes": "^0.3.0",
-    "prettier": "^3.3.3",
-    "react": "18.2.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.53.1",
-    "react-hook-geolocation": "^1.1.0",
-    "react-icons": "^5.3.0",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.0"
-  },
-  "devDependencies": {
-    "@prisma/nextjs-monorepo-workaround-plugin": "^5.21.1",
-    "@types/google-one-tap": "^1.2.6",
-    "@types/node": "^20.10.6",
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
-    "postcss": "8.4.33",
-    "prisma": "^5.22.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.4.1",
-    "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "vercel-build": "prisma generate && prisma migrate deploy && next build",
+        "migrate": "prisma migrate deploy ",
+        "create-migrations": "prisma migrate dev && prisma generate"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^3.9.0",
+        "@prisma/client": "^5.22.0",
+        "@radix-ui/react-avatar": "^1.1.1",
+        "@radix-ui/react-checkbox": "^1.1.1",
+        "@radix-ui/react-dialog": "^1.1.2",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-popover": "^1.1.2",
+        "@radix-ui/react-progress": "^1.1.0",
+        "@radix-ui/react-scroll-area": "^1.2.1",
+        "@radix-ui/react-separator": "^1.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-toggle": "^1.1.0",
+        "@radix-ui/react-toggle-group": "^1.1.0",
+        "@supabase/ssr": "latest",
+        "@supabase/supabase-js": "latest",
+        "@tanstack/react-query": "^5.59.16",
+        "@tanstack/react-query-devtools": "^5.59.16",
+        "@vercel/analytics": "^1.3.1",
+        "@vis.gl/react-google-maps": "^1.3.0",
+        "autoprefixer": "10.4.17",
+        "chrono-node": "^2.7.7",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "date-fns": "^3.6.0",
+        "embla-carousel": "^8.3.0",
+        "embla-carousel-react": "^8.3.0",
+        "framer-motion": "^11.11.17",
+        "geist": "^1.2.1",
+        "google-one-tap": "^1.0.6",
+        "lucide-react": "^0.436.0",
+        "next": "latest",
+        "next-themes": "^0.3.0",
+        "react": "18.2.0",
+        "react-day-picker": "^8.10.1",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.53.1",
+        "react-hook-geolocation": "^1.1.0",
+        "react-icons": "^5.3.0",
+        "zod": "^3.23.8",
+        "zustand": "^5.0.0"
+    },
+    "devDependencies": {
+        "@prisma/nextjs-monorepo-workaround-plugin": "^5.21.1",
+        "@types/google-one-tap": "^1.2.6",
+        "@types/node": "^20.10.6",
+        "@types/react": "18.2.46",
+        "@types/react-dom": "18.2.18",
+        "postcss": "8.4.33",
+        "prettier": "3.3.3",
+        "prisma": "^5.22.0",
+        "tailwind-merge": "^2.5.2",
+        "tailwindcss": "3.4.1",
+        "tailwindcss-animate": "^1.0.7",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
+    },
+    "prettier": {
+        "tabWidth": 4,
+        "semi": false,
+        "printWidth": 120
+    }
 }
