--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
         "start": "next start",
         "vercel-build": "prisma generate && prisma migrate deploy && next build",
         "migrate": "prisma migrate deploy ",
-        "create-migrations": "prisma migrate dev && prisma generate"
+        "create-migrations": "prisma migrate dev && prisma generate",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
+        "@next/eslint-plugin-next": "^15.0.3",
         "@prisma/client": "^5.22.0",
         "@radix-ui/react-avatar": "^1.1.1",
         "@radix-ui/react-checkbox": "^1.1.1",
@@ -53,11 +55,17 @@
         "zustand": "^5.0.0"
     },
     "devDependencies": {
+        "@eslint/js": "^9.15.0",
         "@prisma/nextjs-monorepo-workaround-plugin": "^5.21.1",
         "@types/google-one-tap": "^1.2.6",
         "@types/node": "^20.10.6",
         "@types/react": "18.2.46",
         "@types/react-dom": "18.2.18",
+        "eslint": "^9.15.0",
+        "eslint-plugin-react": "^7.37.2",
+        "globals": "^15.12.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.2.10",
         "postcss": "8.4.33",
         "prettier": "3.3.3",
         "prisma": "^5.22.0",
@@ -65,11 +73,18 @@
         "tailwindcss": "3.4.1",
         "tailwindcss-animate": "^1.0.7",
         "ts-node": "^10.9.2",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "typescript-eslint": "^8.15.0"
     },
     "prettier": {
         "tabWidth": 4,
         "semi": false,
         "printWidth": 120
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --fix",
+            "prettier --write"
+        ]
     }
 }
