--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "react": "18.2.0",
         "react-day-picker": "^8.10.1",
         "react-dom": "18.2.0",
+        "react-google-button": "^0.8.0",
         "react-hook-form": "^7.53.1",
         "react-hook-geolocation": "^1.1.0",
         "react-icons": "^5.3.0",
